# news-filter

./: .gitignore  .pdm-python  README.md  app.py  headlines.json  index.html  pyproject.toml  script.js  style.css
static/: script.js  style.css
templates/: index.html
