[project]
name = "news-filter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DUOLabs333", email = "dvdugo333@gmail.com"},
]
dependencies = ["flask>=3.1.1", "requests>=2.32.3", "dotenv>=0.9.9"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
